k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cassellas-api
  namespace: cassellas-api
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: cassellas-api-cert-v2
spec:
  rules:
    - host: api.cassellas.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cassellas-api
                port:
                  number: 80
